// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoCard renders a component with expanded TodoStepList 1`] = `
<TodoCardWrapper
  theme={[ThemeObject]}
>
  <HeaderWrapper>
    <CardHeader>
      Todo title
    </CardHeader>
    <Status
      mediaType="only screen and (min-width: 1024px)"
      onClick={[Function]}
      status="COMPLETE"
      theme={[ThemeObject]}
    />
  </HeaderWrapper>
  <Goal
    onClick={[Function]}
  >
    Goal description
  </Goal>
  <TodoStepList
    steps={Array []}
  />
</TodoCardWrapper>
`;

exports[`TodoCard renders a component with non-expanded TodoStepList 1`] = `
<TodoCardWrapper
  theme={[ThemeObject]}
>
  <HeaderWrapper>
    <CardHeader>
      Todo title
    </CardHeader>
    <Status
      mediaType="only screen and (min-width: 1024px)"
      onClick={[Function]}
      status="COMPLETE"
      theme={[ThemeObject]}
    />
  </HeaderWrapper>
  <Goal
    onClick={[Function]}
  >
    Goal description
  </Goal>
</TodoCardWrapper>
`;
